log
Wed, Apr 30, 2025  9:15:10 AM: 
 tests:  1|8
total_score: 0/70
5729e4d
Wed, Apr 30, 2025  9:35:25 AM: 
 treemap.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:4:0:
test.c: In function 'createTreeMap':
treemap.c:41:15: error: 'new' is used uninitialized in this function [-Werror=uninitialized]
     new->root = (TreeNode *) malloc(sizeof(TreeNode));
     ~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
e1aa18b
Wed, Apr 30, 2025  9:36:06 AM: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|8
total_score: 0/70
7487f6a
Wed, Apr 30, 2025  9:36:27 AM: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|8
total_score: 0/70
c4c422b
Wed, Apr 30, 2025  9:36:56 AM: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:4:0:
treemap.c: In function 'createTreeMap':
treemap.c:42:5: error: expected ';' before 'new'
     new->current = NULL
     ^~~
f57b483
Wed, Apr 30, 2025  9:37:11 AM: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
dc36f56
Wed, Apr 30, 2025  9:37:33 AM: 
 treemap.c | 4 ----
 1 file changed, 4 deletions(-)
 tests:  4|7
total_score: 5/70
6840381
Wed, Apr 30, 2025  9:47:41 AM: 
 treemap.c | 11 ++++++++---
 1 file changed, 8 insertions(+), 3 deletions(-)
Compilation failed
In file included from test.c:4:0:
treemap.c: In function 'searchTreeMap':
treemap.c:74:33: error: comparison of distinct pointer types lacks a cast [-Werror]
         if (tree->current->left <key) tree->current=tree->current->right;
                                 ^
treemap.c:75:39: error: comparison of distinct pointer types lacks a cast [-Werror]
         else if (tree->current->right <key) tree->current=tree->current->left;
                                       ^
cc1.exe: all warnings being treated as errors
f1ca9b1
Wed, Apr 30, 2025  9:48:10 AM: 
 treemap.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
Compilation failed
In file included from test.c:4:0:
treemap.c: In function 'searchTreeMap':
treemap.c:71:41: error: dereferencing 'void *' pointer [-Werror]
         if (tree->current->pair->key == *key) return tree->current->pair;
                                         ^~~~
treemap.c:71:41: error: void value not ignored as it ought to be
treemap.c:72:51: error: dereferencing 'void *' pointer [-Werror]
         else if(tree->current->left->pair->key == *key) return tree->current->left->pair;
                                                   ^~~~
treemap.c:72:51: error: void value not ignored as it ought to be
treemap.c:73:52: error: dereferencing 'void *' pointer [-Werror]
         else if(tree->current->right->pair->key == *key) return tree->current->right->pair;
                                                    ^~~~
treemap.c:73:52: error: void value not ignored as it ought to be
treemap.c:74:34: error: dereferencing 'void *' pointer [-Werror]
         if (tree->current->left <*key) tree->current=tree->current->right;
                                  ^~~~
treemap.c:74:34: error: void value not ignored as it ought to be
treemap.c:75:40: error: dereferencing 'void *' pointer [-Werror]
         else if (tree->current->right <*key) tree->current=tree->current->left;
                                        ^~~~
treemap.c:75:40: error: void value not ignored as it ought to be
cc1.exe: all warnings being treated as errors
7713b74
Wed, Apr 30, 2025  9:48:34 AM: 
 treemap.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
Compilation failed
In file included from test.c:4:0:
treemap.c: In function 'searchTreeMap':
treemap.c:74:33: error: comparison of distinct pointer types lacks a cast [-Werror]
         if (tree->current->left <key) tree->current=tree->current->right;
                                 ^
treemap.c:75:39: error: comparison of distinct pointer types lacks a cast [-Werror]
         else if (tree->current->right <key) tree->current=tree->current->left;
                                       ^
cc1.exe: all warnings being treated as errors
3115844
Wed, Apr 30, 2025  9:49:41 AM: 
 treemap.c | 13 ++++++++-----
 1 file changed, 8 insertions(+), 5 deletions(-)
 tests:  4|7
total_score: 5/70
4bd496a
Wed, Apr 30, 2025  9:52:09 AM: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
edab763
Wed, Apr 30, 2025  9:52:29 AM: 
 treemap.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  4|7
total_score: 5/70
d15da5d
Wed, Apr 30, 2025  9:53:07 AM: 
 treemap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  11|6
total_score: 15/70
e3cbac3
Wed, Apr 30, 2025  9:54:17 AM: 
 treemap.c | 35 ++++++++++++++++++++++++++++++++++-
 1 file changed, 34 insertions(+), 1 deletion(-)
 tests:  13|5
total_score: 25/70
39bcce3
Wed, Apr 30, 2025  9:56:06 AM: 
 treemap.c | 33 ++++++++++-----------------------
 1 file changed, 10 insertions(+), 23 deletions(-)
 tests:  13|5
total_score: 25/70
8267556
Wed, Apr 30, 2025  9:56:36 AM: 
 treemap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  15|4
total_score: 25/70
bd234b8
Wed, Apr 30, 2025  9:57:27 AM: 
 treemap.c | 25 ++++++++++++++++++++++++-
 1 file changed, 24 insertions(+), 1 deletion(-)
 tests:  18|3
total_score: 40/70
fb39d96
Sun, May  4, 2025 10:47:37 PM: 
 treemap.c | 11 +++++------
 1 file changed, 5 insertions(+), 6 deletions(-)
Compilation failed
In file included from test.c:4:
treemap.c: In function 'upperBound':
treemap.c:123:16: error: unused variable 'aBuscar' [-Werror=unused-variable]
  123 |     TreeNode * aBuscar;
      |                ^~~~~~~
test.c: At top level:
test.c:6:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    6 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
dc3f5f9
Sun, May  4, 2025 10:47:52 PM: 
Compilation failed
In file included from test.c:4:
treemap.c: In function 'upperBound':
treemap.c:123:16: error: unused variable 'aBuscar' [-Werror=unused-variable]
  123 |     TreeNode * aBuscar;
      |                ^~~~~~~
test.c: At top level:
test.c:6:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    6 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
2aff188
Sun, May  4, 2025 10:47:59 PM: 
 treemap.c | 3 ---
 1 file changed, 3 deletions(-)
Compilation failed
test.c:6:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    6 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
f9112d1
Sun, May  4, 2025 10:48:34 PM: 
Compilation failed
test.c:6:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    6 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
3bc3ea1
Sun, May  4, 2025 10:50:00 PM: 
Compilation failed
test.c:6:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    6 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
9b6d8b6
Sun, May  4, 2025 10:51:12 PM: 
 tests:  18|3
total_score: 40/70
aa3b704
Sun, May  4, 2025 11:09:11 PM: 
 treemap.c | 19 ++++++++++++++++++-
 1 file changed, 18 insertions(+), 1 deletion(-)
 tests:  22|2
total_score: 50/70
c241a9c
Sun, May  4, 2025 11:21:43 PM: 
 treemap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  24|1
total_score: 55/70
775ad53
Sun, May  4, 2025 11:30:12 PM: 
 treemap.c | 21 +++++++++++++++++++++
 1 file changed, 21 insertions(+)
Compilation failed
In file included from test.c:4:
treemap.c:156:8: error: redefinition of 'nextTreeMap'
  156 | Pair * nextTreeMap(TreeMap * tree) {
      |        ^~~~~~~~~~~
treemap.c:152:8: note: previous definition of 'nextTreeMap' with type 'Pair *(TreeMap *)'
  152 | Pair * nextTreeMap(TreeMap * tree) {
      |        ^~~~~~~~~~~
treemap.c: In function 'nextTreeMap':
treemap.c:162:16: error: returning 'TreeNode *' from a function with incompatible return type 'Pair *' [-Wincompatible-pointer-types]
  162 |         return aux;
      |                ^~~
test.c: At top level:
test.c:6:8: warning: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Wattributes]
    6 | char * _strdup(const char * str) {
      |        ^~~~~~~
5a3bc30
Sun, May  4, 2025 11:30:39 PM: 
 treemap.c | 3 ---
 1 file changed, 3 deletions(-)
Compilation failed
In file included from test.c:4:
treemap.c: In function 'nextTreeMap':
treemap.c:159:16: error: returning 'TreeNode *' from a function with incompatible return type 'Pair *' [-Wincompatible-pointer-types]
  159 |         return aux;
      |                ^~~
test.c: At top level:
test.c:6:8: warning: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Wattributes]
    6 | char * _strdup(const char * str) {
      |        ^~~~~~~
8996d9e
